Add whitelisted platforms

--- a/SentrySDK.uplugin
+++ b/SentrySDK.uplugin
@@ -18,7 +18,8 @@
 		{
 			"Name": "SentrySDK",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"WhitelistPlatforms": [ "Win64", "Mac", "Android", "IOS" ]
 		}
 	]
 }
