Add plugin packaging for UE5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,20 @@ on: [push]
 jobs:
   package-plugin-job:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        unreal: [ue-4-27, ue-5-0]
+        include:
+        - unreal: ue-4-27
+          UE_IMAGE: "ghcr.io/epicgames/unreal-engine:dev-slim-4.27"
+          UE_VERSION: "ue4"
+        - unreal: ue-5-0
+          UE_IMAGE: "ghcr.io/epicgames/unreal-engine:dev-slim-5.0.2"
+          UE_VERSION: "ue5"
+
     container:
-      image: ghcr.io/epicgames/unreal-engine:dev-slim-4.27
+      image: ${{ matrix.UE_IMAGE }}
       credentials:
         username: ${{ secrets.UE_REPO_USER }}
         password: ${{ secrets.UE_REPO_ACCESS_TOKEN }}
@@ -27,7 +39,7 @@ jobs:
 
       - name: Configuring UE CLI
         run:
-          ue4 setroot /home/ue4/UnrealEngine
+          ue4 setroot /home/${{ matrix.UE_VERSION }}/UnrealEngine
 
       - name: Package plugin
         run: ue4 package
