--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Run Docker container
         run: |
-          echo ${{ secrets.UE_REPO_ACCESS_TOKEN }} | docker login ghcr.io -u ${{ secrets.UE_REPO_USER }} --password-stdin
+          echo ${{ secrets.DOCKER_TOKEN }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker run -td --name unreal --user root \
             -v ${{ github.workspace }}:/sentry-unreal \
             --workdir /sentry-unreal \
