--- a/plugin-dev/Sentry.uplugin
+++ b/plugin-dev/Sentry.uplugin
@@ -21,5 +21,11 @@
 			"LoadingPhase": "Default",
 			"WhitelistPlatforms": [ "Win64", "Mac", "Android", "IOS", "Linux" ]
 		}
-	]
+	],
+	"PostBuildSteps":
+	{
+		"Mac": [
+			"sh $(PluginDir)/Scripts/upload-debug-symbols-ios.sh $(TargetPlatform) $(TargetName) $(TargetType) $(ProjectDir) $(PluginDir)"
+		]
+	}
 }
