--- a/.craft.yml
+++ b/.craft.yml
@@ -1,6 +1,7 @@
 minVersion: 0.24.0
 changelogPolicy: auto
 targets:
+  # TODO
   # - name: symbol-collector
   #   includeNames: /libsentry(-android)?\.so/
   #   batchType: android
