--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,5 @@ Intermediate/*
 .DS_Store
 
 # Ignore package release
-test-package-release/
 package-release/
-package-release.zip
+sentry-unreal-*.zip
