--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,13 +27,13 @@ jobs:
 
   package-validation:
     needs: [build]
-    name: UPM Package validation
+    name: Validate package against snapshot
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Download UPM package
+      - name: Download packages
         uses: actions/download-artifact@v2
         with:
           name: ${{ github.sha }}
@@ -50,26 +50,25 @@ jobs:
   # TODO: does it make sense to thest packages created by the build job instead?
   test-ue-packaging:
     runs-on: ubuntu-latest
+    needs: [build]
 
     strategy:
       matrix:
-        unreal: ['4.27', '5.0.2']
+        # Note: these versions must match scripts/packaging/engine-versions.txt
+        unreal: ['4.26', '4.27', '5.0']
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
       - name: Free disk space
         if: ${{ steps.exists.outputs.value == 0 }}
         run: |
           # time df -h
           sudo time swapoff -a
           sudo time rm -f /swapfile
-          sudo time rm -rf /usr/local/lib/android
+          # sudo time rm -rf /usr/local/lib/android
           sudo time rm -rf /usr/share/dotnet
           sudo time rm -rf /usr/share/swift
           sudo time rm -rf /usr/local/.ghcup
-          sudo time rm -rf /usr/local/lib/node_modules
+          # sudo time rm -rf /usr/local/lib/node_modules
           sudo time rm -rf /usr/lib/google-cloud-sdk
           sudo time rm -rf /opt/pipx
           sudo time rm -rf "$AGENT_TOOLSDIRECTORY"
@@ -79,24 +78,31 @@ jobs:
           # time du --max-depth=3 --threshold=100M -h /usr /opt /var 2>/dev/null | sort -hr
           df -h
 
-      - name: Run Docker container
+      - name: Start Docker container
         run: |
           echo ${{ secrets.DOCKER_TOKEN }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker run -td --name unreal --user root \
-            -v ${{ github.workspace }}/plugin-dev:/sentry-unreal \
+            -v ${{ github.workspace }}:/sentry-unreal \
             --workdir /sentry-unreal \
             ghcr.io/epicgames/unreal-engine:dev-slim-${{ matrix.unreal }}
 
-      - name: Installing Linux Dependencies
+      - name: Download packages
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ github.sha }}
+
+      - run: unzip sentry-unreal-*-engine${{ matrix.unreal }}.zip -d .
+
+      - name: Install Linux Dependencies
         run: |
           docker exec unreal sudo apt-get update
           docker exec unreal pip3 install --upgrade pip
 
-      - name: Installing UE CLI
+      - name: Install UE CLI
         run:
           docker exec unreal pip3 install ue4cli
 
-      - name: Configuring UE CLI
+      - name: Configure UE CLI
         run:
           docker exec unreal ue4 setroot /home/ue4/UnrealEngine
 
