--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
 
   build:
     needs: [android-sdk, ios-sdk, macos-sdk, linux-sdk, windows-sdk]
-    name: Build
+    name: Package
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -88,7 +88,7 @@ jobs:
 
   package-validation:
     needs: [build]
-    name: Validate package against snapshot
+    name: Check snapshot
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -111,7 +111,7 @@ jobs:
   test-ue-packaging:
     name: Test UE ${{ matrix.unreal }} packaging
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [build, package-validation]
 
     strategy:
       fail-fast: false
