--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,24 +3,69 @@ name: package-plugin-workflow
 on: [push]
 
 jobs:
-  package-plugin-job:
+  build:
+    name: Build
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        unreal: ['4.27', '5.0.2']
-
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
+      - name: Prepare Sentry packages for release
+        shell: pwsh
+        run: ./scripts/packaging/pack.ps1
+
+      - name: Upload release artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          # Artifact name is the commit sha. Which is what craft uses to find the relevant artifact.
+          name: ${{ github.sha }}
+          if-no-files-found: error
+          path: |
+            sentry-unreal-*.zip
+          # Adding the native libraries so the symbol collector craft target can find/upload them
+          # TODO modules/sentry-java/sentry-android-ndk/build/intermediates/merged_native_libs/release/out/lib/*
+
+  package-validation:
+    needs: [build]
+    name: Validate package against snapshot
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Download packages
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ github.sha }}
+
+      # If this step fails, you can accept the new file content by
+      # running the following script locally with 'accept' as an argument
+      # and committing the new snapshot file to your branch. i.e:
+      # pwsh ./scripts/test-contents.ps1 accept
+      - name: Verify package content against snapshot
+        shell: pwsh
+        run: ./scripts/packaging/test-contents.ps1
+
+  # Smoke-test that the UnrealEnginge can package the plugin.
+  test-ue-packaging:
+    name: Test UE ${{ matrix.unreal }} packaging
+    runs-on: ubuntu-latest
+    needs: [build]
+
+    strategy:
+      fail-fast: false
+      matrix:
+        # Note: these versions must match scripts/packaging/engine-versions.txt
+        unreal: ['4.27', '5.0'] # 4.26 is not available
+
+    steps:
       - name: Free disk space
         if: ${{ steps.exists.outputs.value == 0 }}
         run: |
           # time df -h
           sudo time swapoff -a
           sudo time rm -f /swapfile
-          sudo time rm -rf /usr/local/lib/android
+          # sudo time rm -rf /usr/local/lib/android
           sudo time rm -rf /usr/share/dotnet
           sudo time rm -rf /usr/share/swift
           sudo time rm -rf /usr/local/.ghcup
@@ -34,24 +79,34 @@ jobs:
           # time du --max-depth=3 --threshold=100M -h /usr /opt /var 2>/dev/null | sort -hr
           df -h
 
-      - name: Run Docker container
+      - name: Start Docker container
         run: |
           echo ${{ secrets.DOCKER_TOKEN }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker run -td --name unreal --user root \
-            -v ${{ github.workspace }}/plugin-dev:/sentry-unreal \
+            -v ${{ github.workspace }}:/sentry-unreal \
             --workdir /sentry-unreal \
             ghcr.io/epicgames/unreal-engine:dev-slim-${{ matrix.unreal }}
 
-      - name: Installing Linux Dependencies
+      - name: Download packages
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ github.sha }}
+
+      - name: Unzip package from the build job
+        run: |
+          unzip sentry-unreal-*-engine${{ matrix.unreal }}.zip -d .
+          rm -f sentry-unreal-*.zip
+
+      - name: Install Linux Dependencies
         run: |
           docker exec unreal sudo apt-get update
           docker exec unreal pip3 install --upgrade pip
 
-      - name: Installing UE CLI
+      - name: Install UE CLI
         run:
           docker exec unreal pip3 install ue4cli
 
-      - name: Configuring UE CLI
+      - name: Configure UE CLI
         run:
           docker exec unreal ue4 setroot /home/ue4/UnrealEngine
 
