Fix script name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download CLI
-        run: sh ./scripts/download-sentry-cli.sh
+        run: sh ./scripts/download-cli.sh
 
       - uses: actions/download-artifact@v2
         with:
