--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download CLI
-        run: sh ./scripts/download-cli.sh
+        shell: pwsh
+        run: ./scripts/download-senrty-cli.ps1
 
       - uses: actions/download-artifact@v2
         with:
