Add sample project (#64)
* Add sample project

* update sample app, scripts and contribution guidelines

* fixup scripts

* Update CONTRIBUTING.md

Co-authored-by: Ivan Tustanivsky <tustanivsky@gmail.com>

* fix: download-sdks scripts

Co-authored-by: Ivan Dlugos <dlugos.ivan@gmail.com>
Co-authored-by: Ivan Dlugos <6349682+vaind@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,21 @@
-# Visual Studio user specific files
-.vs/
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-
-# Executables
-*.out
-*.app
-*.ipa
+# IDEs
+.vs
+.idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
 
 # Binary Files
-Binaries/*
+plugin-dev/Binaries/*
 
 # Compiled source files for the engine to use
-Intermediate/*
+plugin-dev/Intermediate/*
+
+# plugin-dev link
+**/Plugins/sentry
 
 # Other
 .DS_Store
