--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -21,7 +21,7 @@ jobs:
   java:
     uses: getsentry/github-workflows/.github/workflows/updater.yml@v1
     with:
-      path: scripts/update-java.sh
+      path: modules/sentry-java
       name: Java SDK (Android)
     secrets:
       api_token: ${{ secrets.CI_DEPLOY_KEY }}
