use sentry.properties as a relative path

--- a/sample/Config/DefaultEngine.ini
+++ b/sample/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Sentry/Maps/SentryDemo.SentryDemo
 LocalMapOptions=
@@ -266,6 +264,9 @@ bGeneratedSYMBundle=True
 DsnUrl="https://93c7a68867db43539980de54f09b139a@o447951.ingest.sentry.io/6253052"
 InitAutomatically=False
 AutomaticBreadcrumbs=(bOnMapLoadingStarted=True,bOnMapLoaded=True,bOnGameStateClassChanged=True,bOnGameSessionIDChanged=True,bOnUserActivityStringChanged=True)
+UploadSymbolsAutomatically=True
+Release=
+PropertiesFilePath=Config/sentry.properties
 
 [/Script/MacTargetPlatform.MacTargetSettings]
 SpatializationPlugin=Built-in Spatialization
