Add debug symbols upload (#59)
* Add CLI tools

* Add debug symbols upload for iOS, Mac and Linux

* Add debug symbols upload script for Windows

* Fix errors with debug symbols upload on Linux

* Remove redundant script

* Update location of symbols upload scripts

* Update .gitignore

* Fix packaging issue on Linux

* Add plugin binaries symbols upload

* Remove Sentry CLI binaries

* Fix download script

* Fix workflow

* Fix script name

* Fix workflow once again

* Fix empty line

* Fix typo

* Fix CLI pathj

* Remo redundant message

* Fix CLI download sript

* Remo user credentials for debug symbols upload from plugin settings

* Update debug symbols upload script for win

* Fix regex

* Update changelog

* chore: rename cli download script

* use sentry.properties as a relative path

* fix: android debug symbol upload

* Fix issue with reading sentry.properties file path from settings on Mac

Co-authored-by: Ivan Dlugos <dlugos.ivan@gmail.com>

--- a/plugin-dev/Sentry.uplugin
+++ b/plugin-dev/Sentry.uplugin
@@ -21,5 +21,17 @@
 			"LoadingPhase": "Default",
 			"WhitelistPlatforms": [ "Win64", "Mac", "Android", "IOS", "Linux" ]
 		}
-	]
+	],
+	"PostBuildSteps":
+	{
+		"Mac": [
+			"sh $(PluginDir)/Scripts/upload-debug-symbols.sh $(TargetPlatform) $(TargetName) $(TargetType) $(ProjectDir) $(PluginDir)"
+		],
+		"Linux": [
+			"sh $(PluginDir)/Scripts/upload-debug-symbols.sh $(TargetPlatform) $(TargetName) $(TargetType) $(ProjectDir) $(PluginDir)"
+		],
+		"Win64": [
+			"powershell -ExecutionPolicy RemoteSigned -File $(PluginDir)/Scripts/upload-debug-symbols-win.ps1 $(TargetPlatform) $(TargetName) $(TargetType) $(ProjectDir) $(PluginDir)"
+		]
+	}
 }
