--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -16,7 +16,7 @@ jobs:
       path: modules/sentry-native
       name: Native SDK
     secrets:
-      api_token: ${{ secrets.CI_DEPLOY_KEY }}
+      api-token: ${{ secrets.CI_DEPLOY_KEY }}
 
   java:
     uses: getsentry/github-workflows/.github/workflows/updater.yml@v2
@@ -24,7 +24,7 @@ jobs:
       path: modules/sentry-java
       name: Java SDK (Android)
     secrets:
-      api_token: ${{ secrets.CI_DEPLOY_KEY }}
+      api-token: ${{ secrets.CI_DEPLOY_KEY }}
 
   cocoa:
     uses: getsentry/github-workflows/.github/workflows/updater.yml@v2
@@ -32,7 +32,7 @@ jobs:
       path: modules/sentry-cocoa
       name: Cocoa SDK (iOS)
     secrets:
-      api_token: ${{ secrets.CI_DEPLOY_KEY }}
+      api-token: ${{ secrets.CI_DEPLOY_KEY }}
 
   cli:
     uses: getsentry/github-workflows/.github/workflows/updater.yml@v2
@@ -40,4 +40,4 @@ jobs:
       path: modules/sentry-cli.properties
       name: CLI
     secrets:
-      api_token: ${{ secrets.CI_DEPLOY_KEY }}
+      api-token: ${{ secrets.CI_DEPLOY_KEY }}
