--- a/sample/Config/DefaultEngine.ini
+++ b/sample/Config/DefaultEngine.ini
@@ -143,7 +143,7 @@ VisualizeCalibrationGrayscaleMaterialPath=None
 bExplicitCanvasChildZOrder=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.sentry.unreal.sample
+PackageName=io.sentry.unreal.sample
 StoreVersion=1
 StoreVersionOffsetArmV7=0
 StoreVersionOffsetArm64=0
@@ -250,7 +250,7 @@ bEnableDomStorage=False
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 BundleDisplayName=SentryDemo
-BundleIdentifier=com.sentry.unreal
+BundleIdentifier=io.sentry.unreal.sample
 bAutomaticSigning=True
 IOSTeamID=
 BundleName=SentryDemo
