--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,29 +146,39 @@ jobs:
 
       - name: Start Docker container
         run: |
+          uid=$(id -u)
+          gid=$(id -g)
           echo ${{ secrets.DOCKER_TOKEN }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker run -td --name unreal --user root \
-            -v ${{ github.workspace }}:/sentry-unreal \
-            --workdir /sentry-unreal \
+          docker run -td \
+            --name unreal \
+            --volume ${{ github.workspace }}:/workspace \
+            --workdir /workspace \
+            --user $uid:$gid \
+            --env PATH='/home/ue4/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin' \
             ghcr.io/epicgames/unreal-engine:dev-slim-${{ matrix.unreal }}
+          docker logout ghcr.io
+          # Fixup UID and GID of the user in the container to match the GH action user
+          docker exec --user root unreal groupmod -g $gid ue4
+          docker exec --user root unreal usermod -u $uid -g $gid ue4
 
       - name: Setup UE CLI
-        run: |
-          docker exec unreal pip3 install ue4cli
-          docker exec unreal ue4 setroot /home/ue4/UnrealEngine
+        run: docker exec unreal bash -c '
+          pip3 install --upgrade pip ;
+          pip3 install -Iv ue4cli==0.0.54 ;
+          ue4 setroot /home/ue4/UnrealEngine '
 
       - name: Download packages
         uses: actions/download-artifact@v2
         with:
           name: ${{ github.sha }}
 
-      - name: Unzip package from the build job
+      - name: Unzip UE v${{ matrix.unreal }} plugin package
         run: |
           unzip sentry-unreal-*-engine${{ matrix.unreal }}.zip -d plugin
           rm -f sentry-unreal-*.zip
 
-      - name: 'Test 1: package plugin'
-        run: docker exec unreal ue4 package
+      - name: 'Test 1: build plugin'
+        run: docker exec -w /workspace/plugin unreal ue4 package
 
       - uses: actions/checkout@v3
         with:
@@ -177,4 +187,4 @@ jobs:
       - name: 'Test 2: build sample app'
         run: |
           ln -s ${{ github.workspace }}/plugin checkout/sample/Plugins/sentry
-          docker exec unreal bash -c 'cd sample ; ue4 package'
+          docker exec -w /workspace/checkout/sample unreal ue4 package
